<resources>
    <string name="app_name">Mapssages</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_map">Carte</string>
    <string name="menu_list">Liste</string>
    <string name="menu_connect">Connexion</string>

    <string name="toolbar_config">Paramètres</string>
    <string name="toolar_delete">Supprimer</string>
    <string name="toolbar_disconnect">Déconnexion</string>

    <string name="map_add">Ajouter</string>

    <string name="config_firstname">Prénom</string>
    <string name="config_lastname">Nom</string>

    <string name="connect_email">Courriel</string>
    <string name="connect_password">Mot de passe</string>
    <string name="connect_submit">Se connecter</string>

</resources>